; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_stv090x.c_stv090x_set_s2rolloff.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_stv090x.c_stv090x_set_s2rolloff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stv090x_state = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@DEMOD = common dso_local global i32 0, align 4
@MANUAL_SXROLLOFF_FIELD = common dso_local global i32 0, align 4
@MANUAL_S2ROLLOFF_FIELD = common dso_local global i32 0, align 4
@FE_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"I/O error\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.stv090x_state*)* @stv090x_set_s2rolloff to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stv090x_set_s2rolloff(%struct.stv090x_state* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.stv090x_state*, align 8
  %4 = alloca i32, align 4
  store %struct.stv090x_state* %0, %struct.stv090x_state** %3, align 8
  %5 = load %struct.stv090x_state*, %struct.stv090x_state** %3, align 8
  %6 = getelementptr inbounds %struct.stv090x_state, %struct.stv090x_state* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp sle i32 %9, 32
  br i1 %10, label %11, label %25

11:                                               ; preds = %1
  %12 = load %struct.stv090x_state*, %struct.stv090x_state** %3, align 8
  %13 = load i32, i32* @DEMOD, align 4
  %14 = call i32 @STV090x_READ_DEMOD(%struct.stv090x_state* %12, i32 %13)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* @MANUAL_SXROLLOFF_FIELD, align 4
  %17 = call i32 @STV090x_SETFIELD_Px(i32 %15, i32 %16, i32 0)
  %18 = load %struct.stv090x_state*, %struct.stv090x_state** %3, align 8
  %19 = load i32, i32* @DEMOD, align 4
  %20 = load i32, i32* %4, align 4
  %21 = call i64 @STV090x_WRITE_DEMOD(%struct.stv090x_state* %18, i32 %19, i32 %20)
  %22 = icmp slt i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %11
  br label %40

24:                                               ; preds = %11
  br label %39

25:                                               ; preds = %1
  %26 = load %struct.stv090x_state*, %struct.stv090x_state** %3, align 8
  %27 = load i32, i32* @DEMOD, align 4
  %28 = call i32 @STV090x_READ_DEMOD(%struct.stv090x_state* %26, i32 %27)
  store i32 %28, i32* %4, align 4
  %29 = load i32, i32* %4, align 4
  %30 = load i32, i32* @MANUAL_S2ROLLOFF_FIELD, align 4
  %31 = call i32 @STV090x_SETFIELD_Px(i32 %29, i32 %30, i32 0)
  %32 = load %struct.stv090x_state*, %struct.stv090x_state** %3, align 8
  %33 = load i32, i32* @DEMOD, align 4
  %34 = load i32, i32* %4, align 4
  %35 = call i64 @STV090x_WRITE_DEMOD(%struct.stv090x_state* %32, i32 %33, i32 %34)
  %36 = icmp slt i64 %35, 0
  br i1 %36, label %37, label %38

37:                                               ; preds = %25
  br label %40

38:                                               ; preds = %25
  br label %39

39:                                               ; preds = %38, %24
  store i32 0, i32* %2, align 4
  br label %43

40:                                               ; preds = %37, %23
  %41 = load i32, i32* @FE_ERROR, align 4
  %42 = call i32 @dprintk(i32 %41, i32 1, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %2, align 4
  br label %43

43:                                               ; preds = %40, %39
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

declare dso_local i32 @STV090x_READ_DEMOD(%struct.stv090x_state*, i32) #1

declare dso_local i32 @STV090x_SETFIELD_Px(i32, i32, i32) #1

declare dso_local i64 @STV090x_WRITE_DEMOD(%struct.stv090x_state*, i32, i32) #1

declare dso_local i32 @dprintk(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
